<resources>
    <string name="app_name">movie_logger</string>
    <string name="hello_world">Hello World!</string>
    <!-- Navigation Strings -->
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>

    <!-- List Items Strings -->
    <string name="sample_item">Sample Item</string>

    <!-- Dialog Confirmation Strings -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


    <!-- Header/Label Strings -->
    <string name="top_movies">Top movies</string>
    <string name="youve_rated">\ you\'ve rated</string>
    <string name="watch_list">Watchlist</string>
    <string name="trending_now">Trending Now!</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="recently_added">Recently Added</string>
    <string name="top_box_office">Top Box Office</string>
    <string name="action">Action</string>
    <string name="horror">Horror</string>
    <string name="sypnosis">Sypnosis</string>
    <string name="read_more">Read more…</string>
    <string name="ratings">Ratings</string>
    <string name="trailer">Trailer</string>
    <string name="director">Directors</string>
    <string name="writer">Writers</string>
    <string name="stars">Stars</string>
    <string name="genre">Genre</string>
    <string name="ok">Ok</string>


    <string name="sample_title">Jake and Jack</string>
    <string name="sample_sypnosis">With Spider-Man\'s identity now revealed, our friendly neighborhood web-slinger is unmasked and no longer able to separate his normal life as Peter Parker from the high stakes of being a superhero. When Peter asks for help from Doctor Strange, the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man.</string>
    <string name="sample_year">2022</string>
    <string name="sample_day">22</string>
    <string name="sample_dayofweek">THU</string>
    <string name="sample_month">Jun</string>
    <string name="sample_date">July 6, 2022</string>
    <string name="sample_duration">1h 38m | July 28, 2012</string>
    <string name="ave_personal_rating">Ave. Personal Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imdb">IMDb</string>
    <string name="imdbWithColon">IMDb:</string>
    <string name="sample_imdbrating">7.1</string>
    <string name="sample_overall_imdbrating">/10</string>
    <string name="sample_comment_rate">Gave 5 stars!</string>
    <string name="add">Add</string>
    <string name="popular_movies">Most Popular Movies</string>
    <string name="most_popular_tv_series">Most Popular TV Shows</string>
    <string name="top_250_movies">IMDB Top 250 Movies</string>
    <string name="top_250_tv">IMDB Top 250 TV Shows</string>
    <string name="movieimage">movieImage</string>
    <string name="error_message_1">Something went wrong!</string>
    <string name="retry">Retry</string>
    <string name="suggested">Suggested</string>
    <string name="your_rating">Your rating:</string>
    <string name="watched_indicator">Watched</string>
    <string name="sort">Sort</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="sorted_by_with_colon">Sorted by:</string>
    <string name="recommended">Recommended</string>
    <string name="sort_type">Sort type:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="filter_type">Filter type:</string>
    <string name="popularity">Popularity</string>
    <string name="date_released">Date Released</string>
    <string name="date_added">Date Added</string>
    <string name="view_type">View type:</string>
    <string name="detailed">Detailed</string>
    <string name="compact">Compact</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="add_your_comment">Add your comment...</string>
    <string name="rate_this">Rate this</string>
    <string name="leave_a_comment">Leave a comment (Optional)</string>
    <string name="equal">=</string>
    <string name="add_review">Add review</string>
    <string name="submit">Submit</string>
    <string name="rating_placeholder">0.0</string>
    <string name="check_as_watched">Check as watched</string>
    <string name="delete_from_list">Delete from list</string>
    <string name="empty_list_message">No items found!</string>
    <string name="rating_given">Rating Given</string>
    <string name="watched_on">Watched on:</string>
    <string name="watched_list">Watched list</string>
    <string name="empty_watched_list_message">Start watching now!</string>
    <string name="view_profile_statistics">View profile statistics</string>
    <string name="recently_rated">Recently Rated</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add friend</string>
    <string name="guest">Guest</string>
    <string name="sign_in_prompt_header">Jot down every thing you\'ve watched!</string>
    <string name="sign_in_prompt_subHeader">Take entertainment journaling as you showcase and recommend every self-made list to the public</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="not_now">Not now</string>
    <string name="login_header">Welcome back!</string>
    <string name="login_subheader">Let\'s try to sign in you back again</string>
    <string name="password">Password</string>
    <string name="hello">Hello!</string>
    <string name="signing_up_is_a_good_decision">Signing up is a good decision.</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="empty_friends_list">No friends yet!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="notifications">Notifications</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="like">Like</string>
    <string name="filters">Filters</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="user">User</string>
    <string name="empty_suggestions_list">Start typing to see suggestions...</string>
    <string name="page">Page</string>
    <string name="news_feed">News feed!</string>
</resources>