<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/movieMargin">

    <!-- Sypnosis -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@string/font_medium"
        android:text="@string/sypnosis"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeMovieLabels" />

    <TextView
        android:id="@+id/movieSypnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_light"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeBody"
        tools:text="@string/sample_sypnosis" />

    <!-- Genre -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@string/font_medium"
        android:text="@string/genre"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeMovieLabels" />

    <TextView
        android:id="@+id/movieGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:fontFamily="@string/font_light"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeBody"
        tools:text="@string/sample_item" />

    <!-- Stars -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@string/font_medium"
        android:text="@string/stars"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeMovieLabels" />

    <TextView
        android:id="@+id/movieCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_light"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeBody"
        tools:text="@string/sample_item" />

    <!-- Directors -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@string/font_medium"
        android:text="@string/director"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeMovieLabels" />

    <TextView
        android:id="@+id/movieDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_light"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeBody"
        tools:text="@string/sample_item" />

    <!-- Writers -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@string/font_medium"
        android:text="@string/writer"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeMovieLabels" />

    <TextView
        android:id="@+id/movieWriter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_light"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/textSizeBody"
        tools:text="@string/sample_item" />

</LinearLayout>